# delaferia

./: .gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt
conversation/: admin.py  forms.py  models.py  views.py
conversation/migrations/: 0001_initial.py
conversation/templates/conversation/: detail.html  inbox.html  new.html
core/: forms.py  urls.py  views.py
core/templates/core/: base.html  contact.html  index.html  login.html  signup.html
dashboard/: views.py
dashboard/templates/dashboard/: index.html
item/: admin.py  forms.py  models.py  urls.py  views.py
item/migrations/: 0001_initial.py  0002_alter_category_options_item.py
item/templates/item/: detail.html  items.html  new_item.html
marketplace/: settings.py  urls.py
payments/: admin.py  forms.py  models.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_alter_order_total.py
payments/templates/payments/: checkout.html  order.html  shipping.html  success.html
payments/utils/: mercadopago.py
static/css/: output.css
