[project]
name = "feria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.7",
    "django>=5.2.3",
    "django-extensions>=4.1",
    "django-storages>=1.14.6",
    "djoser>=2.3.1",
    "mercadopago>=2.3.0",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.1",
]
